<resources>
    <string name="app_name">InspiringPeople</string>
    <string name="add">Add</string>
    <string name="new_person">New Person</string>
    <string name="name">Name</string>
    <string name="date_of_birth_date_of_death">Date of birth - Date of death</string>
    <string name="description">Description</string>
    <string name="quote">Quote</string>
    <string name="add_quote">Add quote</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="gallery">Gallery</string>
    <string name="born_died">born-died</string>
</resources>
