<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/tvNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:text="@string/new_person"
            android:textSize="30sp"/>


    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/tvNew"
            app:layout_constraintTop_toBottomOf="@id/tvNew"
            android:layout_margin="20dp"
            android:lines="1"
            android:hint="@string/name"/>

    <EditText
            android:id="@+id/etDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/etName"
            app:layout_constraintTop_toBottomOf="@id/etName"
            android:layout_margin="20dp"
            android:lines="1"
            android:hint="@string/date_of_birth_date_of_death"/>

    <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/etDates"
            app:layout_constraintTop_toBottomOf="@id/etDates"
            android:layout_margin="20dp"
            android:minLines="2"
            android:lines="2"
            android:hint="@string/description"/>

    <EditText
            android:id="@+id/etQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/etDescription"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            android:layout_margin="20dp"
            android:lines="1"
            android:hint="@string/quote"/>

    <Button
            android:id="@+id/btnQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etQuote"
            android:layout_margin="10dp"
            android:text="@string/add_quote"/>

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            android:text="@string/cancel"/>

    <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            android:text="@string/ok"/>

    <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etQuote"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="10dp"
            android:text="@string/gallery" />

    <ImageView
            android:id="@+id/ivGallery"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:layout_constraintTop_toBottomOf="@id/btnGallery"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"/>





</android.support.constraint.ConstraintLayout>