<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/silver">

    <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_launcher_background"/>

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/ivPicture"
            app:layout_constraintLeft_toRightOf="@id/ivPicture"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@id/ivPicture"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:layout_alignStart="@id/tvName"
            android:text="@string/born_died"
            android:textColor="@color/gray"/>

    <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTime"
            android:layout_marginStart="115dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintLeft_toRightOf="@id/ivPicture"
            app:layout_constraintTop_toBottomOf="@id/tvTime"
            android:layout_alignStart="@id/tvName"
            android:text="@string/description"
            android:textColor="@color/black"
            android:ellipsize="end"/>

    <ImageView
            android:id="@+id/ivRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


</android.support.constraint.ConstraintLayout>